# В этом файле собраны инструкции, которые нужно применить при обновлении кластера на соответствующую версию.
# Новые инструкции должны добавляться в начало списка, в идеале в том же коммите, в котором и делается изменение.
# Перед обновлением стоит выполнить следующую команду, чтобы посмотреть какие команды нужно выполнить при обновлении с той версии, что на кластере:
#    git diff <cluster commit id> Changelogs
# Также стоит сравнить версии в следующих файлах:
#    yt/server/cell_master/serialize.cpp - если версия другая, то обновлнеие нужно делать через снапшот мастера (сделаный с --set-read-only).
#    yt/server/tablet_node/serialize.cpp - если версия другая, то обновление нужно делать с пересозданием таблет-целлов.

* savrus: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
* savrus: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
* savrus: Поменялся протокол доставки динтабличных статистик между мастерами. Нужно перед обновлением отмонтировать все динтаблицы
* ignat: При обновлении мастеров на свежий prestable/19.3 необходимо удалить пользователя operations_cleaner перед подъемом из снепшота (коммит cd6c1dc5af7)