@@ -6,6 +6,7 @@
 #    yt/server/cell_master/serialize.cpp - если версия другая, то обновлнеие нужно делать через снапшот мастера (сделаный с --set-read-only).
 #    yt/server/tablet_node/serialize.cpp - если версия другая, то обновление нужно делать с пересозданием таблет-целлов.
 
+* savrus: Поменялась обработка prepare стадии mount/unmount/etc, обновляться через снапшот.
 * savrus: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
 * savrus: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
 * savrus: Поменялся протокол доставки динтабличных статистик между мастерами. Нужно перед обновлением отмонтировать все динтаблицы
